@@ -4,36 +4,35 @@
       style="function"
       xmlns:api="http://projectmallard.org/experimental/api/"
       xmlns:ui="http://projectmallard.org/experimental/ui/"
-      id="mongoc_gridfs_find">
+      id="mongoc_gridfs_find_with_opts">
   <info>
     <link type="guide" xref="mongoc_gridfs_t" group="function"/>
   </info>
-  <title>mongoc_gridfs_find()</title>
-
-  <section id="deprecation">
-    <title>Deprecated</title>
-    <p>This function is deprecated, use <code xref="mongoc_gridfs_find_with_opts">mongoc_gridfs_find_with_opts</code> instead.</p>
-  </section>
+  <title>mongoc_gridfs_find_with_opts()</title>
 
   <section id="synopsis">
     <title>Synopsis</title>
     <synopsis><code mime="text/x-csrc"><![CDATA[mongoc_gridfs_file_list_t *
-mongoc_gridfs_find (mongoc_gridfs_t *gridfs,
-                    const bson_t    *query)
-  BSON_GNUC_DEPRECATED_FOR (mongoc_gridfs_find_with_opts);]]></code></synopsis>
+mongoc_gridfs_find_with_opts (mongoc_gridfs_t *gridfs,
+                              const bson_t    *filter,
+                              const bson_t    *opts)
+   BSON_GNUC_WARN_UNUSED_RESULT;]]></code></synopsis>
   </section>
+
 
   <section id="parameters">
     <title>Parameters</title>
     <table>
       <tr><td><p>gridfs</p></td><td><p>A <code xref="mongoc_gridfs_t">mongoc_gridfs_t</code>.</p></td></tr>
-      <tr><td><p>query</p></td><td><p>A <code xref="bson:bson_t">bson_t</code>.</p></td></tr>
+      <tr><td><p>filter</p></td><td><p>A <code xref="bson:bson_t">bson_t</code> containing the query to execute.</p></td></tr>
+      <tr><td><p>opts</p></td><td><p>A <code xref="bson:bson_t">bson_t</code> query options, including sort order and which fields to return. Can be <code>NULL</code>.</p></td></tr>
     </table>
   </section>
 
   <section id="description">
     <title>Description</title>
-    <p>Finds all gridfs files matching <code>query</code>. You can iterate the matched gridfs files with the resulting file list.</p>
+    <p>Finds all gridfs files matching <code>filter</code>. You can iterate the matched gridfs files with the resulting file list.</p>
+    <p>See <code xref="mongoc_collection_find_with_opts">mongoc_collection_find_with_opts</code> for a description of the <code>filter</code> and <code>opts</code> parameters.</p>
   </section>
 
   <section id="return">
