@@ -153,24 +153,12 @@ test_remove (void)
 
 
 static void
-test_list (void)
+prep_files (mongoc_gridfs_t *gridfs)
 {
-   mongoc_gridfs_t *gridfs;
    mongoc_gridfs_file_t *file;
-   mongoc_client_t *client;
-   bson_error_t error;
-   mongoc_gridfs_file_list_t *list;
    mongoc_gridfs_file_opt_t opt = { 0 };
-   bson_t query, child;
    char buf[100];
    int i = 0;
-
-   client = test_framework_client_new ();
-   ASSERT (client);
-
-   ASSERT_OR_PRINT (gridfs = get_test_gridfs (client, "list", &error), error);
-
-   mongoc_gridfs_drop (gridfs, &error);
 
    for (i = 0; i < 3; i++) {
       bson_snprintf (buf, sizeof buf, "file.%d", i);
@@ -180,6 +168,27 @@ test_list (void)
       ASSERT (mongoc_gridfs_file_save (file));
       mongoc_gridfs_file_destroy (file);
    }
+}
+
+
+static void
+test_list (void)
+{
+   mongoc_gridfs_t *gridfs;
+   mongoc_gridfs_file_t *file;
+   mongoc_client_t *client;
+   bson_error_t error;
+   mongoc_gridfs_file_list_t *list;
+   bson_t query, child;
+   char buf[100];
+   int i = 0;
+
+   client = test_framework_client_new ();
+   ASSERT (client);
+
+   ASSERT_OR_PRINT (gridfs = get_test_gridfs (client, "list", &error), error);
+
+   prep_files (gridfs);
 
    bson_init (&query);
    bson_append_document_begin (&query, "$orderby", -1, &child);
@@ -221,6 +230,67 @@ test_list (void)
    drop_collections (gridfs, &error);
    mongoc_gridfs_destroy (gridfs);
 
+   mongoc_client_destroy (client);
+}
+
+static void
+test_find_with_opts (void)
+{
+   mongoc_gridfs_t *gridfs;
+   mongoc_gridfs_file_t *file;
+   mongoc_client_t *client;
+   bson_error_t error;
+   mongoc_gridfs_file_list_t *list;
+
+   client = test_framework_client_new ();
+   mongoc_client_set_error_api (client, 2);
+   gridfs = get_test_gridfs (client, "test_find_with_opts", &error);
+   ASSERT_OR_PRINT (gridfs, error);
+
+   prep_files (gridfs);
+
+   list = mongoc_gridfs_find_with_opts (
+      gridfs,
+      tmp_bson ("{'filename': {'$ne': 'file.1'}}"),
+      tmp_bson ("{'sort': {'filename': -1}}"));
+
+   file = mongoc_gridfs_file_list_next (list);
+   ASSERT (file);
+   ASSERT_CMPSTR ("file.2", mongoc_gridfs_file_get_filename (file));
+   mongoc_gridfs_file_destroy (file);
+
+   file = mongoc_gridfs_file_list_next (list);
+   ASSERT (file);
+   ASSERT_CMPSTR ("file.0", mongoc_gridfs_file_get_filename (file));
+   mongoc_gridfs_file_destroy (file);
+
+   file = mongoc_gridfs_file_list_next (list);
+   ASSERT (!file);  /* done */
+   ASSERT (!mongoc_gridfs_file_list_error (list, &error));
+   mongoc_gridfs_file_list_destroy (list);
+
+   file = mongoc_gridfs_find_one_with_opts (
+      gridfs,
+      tmp_bson (NULL),
+      tmp_bson ("{'sort': {'filename': -1}}"),
+      &error);
+
+   ASSERT_OR_PRINT (file, error);
+   /* file.2 is first, according to sort order */
+   ASSERT_CMPSTR ("file.2", mongoc_gridfs_file_get_filename (file));
+   mongoc_gridfs_file_destroy (file);
+
+   file = mongoc_gridfs_find_one_with_opts (
+      gridfs,
+      tmp_bson ("{'x': {'$bad_operator': 1}}"),
+      NULL,
+      &error);
+
+   ASSERT (!file);
+   ASSERT_CMPINT (error.domain, ==, MONGOC_ERROR_SERVER);
+
+   drop_collections (gridfs, &error);
+   mongoc_gridfs_destroy (gridfs);
    mongoc_client_destroy (client);
 }
 
@@ -977,6 +1047,7 @@ test_gridfs_install (TestSuite *suite)
    TestSuite_AddLive (suite, "/GridFS/create", test_create);
    TestSuite_AddLive (suite, "/GridFS/create_from_stream", test_create_from_stream);
    TestSuite_AddLive (suite, "/GridFS/list", test_list);
+   TestSuite_AddLive (suite, "/GridFS/find_with_opts", test_find_with_opts);
    TestSuite_AddLive (suite, "/GridFS/properties", test_properties);
    TestSuite_AddLive (suite, "/GridFS/empty", test_empty);
    TestSuite_AddLive (suite, "/GridFS/read", test_read);
